force-app/main/default/objects/Credit_utilization__c/Credit_utilization__c.object-meta.xml
<CustomObject>
    <label>Credit Utilization</label>
    <nameField>
        <displayFormat>CREDU - {0000}</displayFormat>
        <label>Credit Utilization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Utilizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>