force-app/main/default/objects/Credit_utilization__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demand</label>
    <referenceTo>Demands__c</referenceTo>
    <relationshipName>Advance_utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>