force-app/main/default/objects/Credit_utilization__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipName>Advance_utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>