force-app/main/default/objects/Credit_utilization__c/fields/Receipt_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Line Item</label>
    <referenceTo>Receipt_Line_Item__c</referenceTo>
    <relationshipName>Advance_utilizations</relationshipName>
    <type>Lookup</type>
</CustomField>