force-app/main/default/objects/Credit_utilization__c/fields/Utilization_Date__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Date__c</fullName>
    <label>Utilization Date</label>
    <type>Date</type>
</CustomField>