force-app/main/default/objects/Credit_utilization__c/fields/Utilized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Utilized_Amount__c</fullName>
    <label>Utilized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>